--- a/dash-client/src/index.css
+++ b/dash-client/src/index.css
@@ -9,3 +9,23 @@ body,
   font-family: 'Inter', sans-serif;
   background-color: #1f2026;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: #242427;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #48494e;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: #48494e;
+  border-radius: 20px;
+}
